[gd_scene load_steps=6 format=3 uid="uid://rrd285mtrnui"]

[ext_resource type="Script" path="res://src/healing_vats_selection_panel.gd" id="1_l0p7j"]
[ext_resource type="Texture2D" uid="uid://dbcomdwxg6fts" path="res://assets/FleetUI/LargeContainerMiddle.png" id="2_uer7f"]
[ext_resource type="Texture2D" uid="uid://h7nsqdept6f0" path="res://assets/FleetUI/FleetSubmenu_smallcontainer.png" id="3_risx8"]
[ext_resource type="Script" path="res://src/Healing_Drop_Area.gd" id="4_dw1jf"]
[ext_resource type="Texture2D" uid="uid://b53qxbulfchgb" path="res://assets/FleetUI/MoneySymbol.png" id="4_joa28"]

[node name="Healing_Vats_Selection_Panel" type="Control" node_paths=PackedStringArray("main_select_button", "main_image", "main_text", "gold_text")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_l0p7j")
main_select_button = NodePath("TextureButton")
main_image = NodePath("TextureButton/TextureRect")
main_text = NodePath("TextureButton/Label")
gold_text = NodePath("TextureButton/Label2")
default_image = ExtResource("3_risx8")

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(210, 34)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -20.0
offset_right = 105.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_uer7f")

[node name="TextureRect" type="TextureRect" parent="TextureButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -16.5
offset_right = 33.0
offset_bottom = 15.5
grow_vertical = 2
texture = ExtResource("3_risx8")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -11.5
offset_right = 70.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Open"

[node name="Label2" type="Label" parent="TextureButton"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -22.5
offset_bottom = 0.5
grow_horizontal = 0
grow_vertical = 0
text = "143"

[node name="TextureRect2" type="TextureRect" parent="TextureButton"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -19.5
offset_right = -39.0
offset_bottom = -3.5
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_joa28")
expand_mode = 2

[node name="TextureButton2" type="TextureButton" parent="." node_paths=PackedStringArray("heal_vat")]
visible = false
layout_mode = 0
offset_left = -105.0
offset_top = -19.0
offset_right = 105.0
offset_bottom = 14.0
script = ExtResource("4_dw1jf")
heal_vat = NodePath("..")

[connection signal="mouse_entered" from="TextureButton" to="TextureButton2" method="start_overlap"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton2" method="end_overlap"]
[connection signal="mouse_entered" from="TextureButton2" to="TextureButton2" method="start_overlap"]
[connection signal="mouse_exited" from="TextureButton2" to="TextureButton2" method="end_overlap"]
